# stellar-contract-verifications

./: README.md
.github/ISSUE_TEMPLATE/: verification-request.yml
.github/workflows/: verify-on-issue.yml
.scripts/verify/: Cargo.toml
.scripts/verify/src/: main.rs
