[package]
name = "stellar-contract-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
hex = "0.4"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"